test/programs/functors/ill-typed/map_twice.caprice
(* TEST
  include refutable;
*)

let MapTwice (dep X : sig
  val t : type -> type (* ERROR: not deterministic *)
  val map : (type a b) -> (a -> b) -> t a -> t b (* thus the t a and t b here are not the same as in the sig below *)
end) : sig
  val map_twice : (type a) -> (a -> a) -> X.t a -> X.t a
end = struct
  let map_twice a f x =
    X.map a a f (X.map a a f x)
end